@@ -1,3 +1,7 @@
+2002-07-24  Harald Harders  <h.harders@tu-bs.de>
+
+	* src/term.c: Closed outline path for filled arrow heads.
+
 2002-07-24  Petr Mikulik  <mikulik@physics.muni.cz>
 
 	* term/post.trm: In PS_filled_polygon(), stroke pending graphic element.
@@ -805,7 +809,7 @@
 
 	* docs/titlepag.sty: Changes for the title page of gnuplot.tex: 
 	Show up-to-date gnuplot version (from the file VERSION) and the
-	last modification date (from the tag $Date: 2002/07/24 09:09:51 $).
+	last modification date (from the tag $Date: 2002/07/24 14:16:51 $).
 
 2002-03-07  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>
 
